updated stacking of noteworthy items and further fixed layout issues across breakpoints for noteworthy

--- a/css/sass/_general.scss
+++ b/css/sass/_general.scss
@@ -120,13 +120,19 @@ iframe {
 .outer-wrapper {
     max-width: 1280px;
     margin: 0 auto;
-    height: 100%;
+    //height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 
 .page {
     padding: 110px emCalc(37) emCalc(35);
     //height: 100%;
     position: relative;
+    overflow: hidden;
 
     &.home { height: 100%; }
 }
@@ -140,10 +146,11 @@ iframe {
 
 // Noteworthy layout & animation
 .n-wrapper {
-    position: fixed;
+    //position: fixed;
     width: 100%;
     max-width: 1280px;
-    padding: 0 2em;
+    z-index: 1;
+    //padding: 0 2em;
     @include transition( opacity 300ms ease-in );
 
     &.home { opacity: 0; }
@@ -155,13 +162,13 @@ iframe {
     background: white;
 
     @include grid-row(collapse);
-    @include translate3d(0,-24%,0);
+    @include translate3d( 0, 27%, 0 );
     @include transition(transform 150ms ease);
 
     margin: 0 auto;
 
     &.open { 
-        @include translate3d(0,-100%,0);
+        @include translate3d( 0, 25%, 0 );
         h2:before { content:"-"; }
     }
 
@@ -677,7 +684,11 @@ iframe {
     }
     .page,
     .page.projects {
-        padding-top: 1em;
+        //padding-top: 1em;
+    }
+
+    .viewer {
+        //padding-top: 60px;
     }
 
     .n-wrapper {
